examples/test/testpolicy9285.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9285
  namespace: namespace292
spec:
  podSelector:
    matchLabels:
      key4: value33
      key17: value33
      key45: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value4
          key30: value25
          key49: value28
      podSelector:
        matchLabels:
          key6: value13
          key13: value9
